8 files modified, 4 added, 2 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,22 @@
-<dynamic-element [elementConfig]="pageElements.warehouse"></dynamic-element>
+<div class="row">
+  <div class="col-12">
+    <dynamic-element [elementConfig]="pageElements.warehouse"></dynamic-element>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    <dynamic-element [elementConfig]="pageElements.owner"></dynamic-element>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    <dynamic-element [elementConfig]="pageElements.po"></dynamic-element>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    <dynamic-element
+      [elementConfig]="pageElements.releaseNum"
+    ></dynamic-element>
+  </div>
+</div>
