--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,3 +20,8 @@
     ></dynamic-element>
   </div>
 </div>
+<div class="row">
+  <div class="col-12">
+    <button (click)="onSubmit()">Submit</button>
+  </div>
+</div>
