--- a/src/app/element-components/dropdown-element/dropdown-element.component.html
+++ b/src/app/element-components/dropdown-element/dropdown-element.component.html
@@ -4,13 +4,13 @@
   [id]="elementConfig.fieldName"
   [pTooltip]="elementConfig.label"
   tooltipPosition="top"
-  [suggestions]="elementConfig.dropdownData"
+  [suggestions]="dataFiltered"
   [placeholder]="elementConfig.label"
   (completeMethod)="filterData($event)"
-  [field]="field"
+  field="{{ elementConfig.field }}"
   [emptyMessage]="noRecords"
   [showEmptyMessage]="true"
-  [dataKey]="elementConfig.warehouseId"
+  [dataKey]="elementConfig.dataKey"
   [dropdown]="true"
   [forceSelection]="false"
   (onSelect)="onItemSelect($event)"
