--- a/src/app/element-components/dropdown-element/dropdown-element.component.html
+++ b/src/app/element-components/dropdown-element/dropdown-element.component.html
@@ -10,7 +10,7 @@
   field="{{ elementConfig.field }}"
   [emptyMessage]="noRecords"
   [showEmptyMessage]="true"
-  [dataKey]="elementConfig.dataKey"
+  [dataKey]="elementConfig.field"
   [dropdown]="true"
   [forceSelection]="false"
   (onSelect)="onItemSelect($event)"
