--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="row">
   <div class="col-12">
+    <button (click)="permissions()">Customize Permissions</button>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12">
     <dynamic-element [elementConfig]="pageElements.warehouse"></dynamic-element>
   </div>
 </div>
