6 files modified, 1 added, 1 deleted

--- a/src/app/element-components/dropdown-element/dropdown-element.component.html
+++ b/src/app/element-components/dropdown-element/dropdown-element.component.html
@@ -18,7 +18,9 @@
   styleClass="custom-dd"
   [inputStyle]="style"
   (onKeyUp)="onKeyUp($event)"
-  [disabled]="disabled"
+  [disabled]="
+    elementConfig.editable != undefined ? !elementConfig.editable : false
+  "
   appendTo="body"
 >
 </p-autoComplete>
