--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12">
+  <div class="col-12" style="text-align: right">
     <button (click)="permissions()">Customize Permissions</button>
   </div>
 </div>
@@ -23,6 +23,13 @@
   <div class="col-12">
     <dynamic-element
       [elementConfig]="pageElements.releaseNum"
+    ></dynamic-element>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    <dynamic-element
+      [elementConfig]="pageElements.receiptType"
     ></dynamic-element>
   </div>
 </div>
